src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dummy_sort__c</fullName>
        <defaultValue>1</defaultValue>
        <description>used to sort records behind the scenes</description>
        <label>Dummy sort</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Salutation__c</fullName>
        <formula>BLANKVALUE( FirstName , TEXT(Salutation) &amp; &apos; &apos; &amp; LastName )</formula>
        <label>Email Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Body__c</fullName>
        <inlineHelpText>You can reference this field as the body, or a portion of the body, of a Mass Email. Typically this might be a personal note at the top of a generic mass email.   All fields on this record can be referenced in mass emails as well.</inlineHelpText>
        <label>Email Template Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Template_Subject__c</fullName>
        <inlineHelpText>You can reference this field as the subject line (or a portion of a subject line) of a Mass Email. All fields on this record can be referenced in mass emails as well.</inlineHelpText>
        <label>Email Template Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Follow_up_Date__c</fullName>
        <inlineHelpText>Use this to set a specific date you&apos;d like the follow-up report to remind you to reach back out.</inlineHelpText>
        <label>Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName + &apos; &apos; + LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>India_Owner__c</fullName>
        <inlineHelpText>The owner that was filled out in the Div2 upload sheet. Actual owner was changed to Matt.</inlineHelpText>
        <label>India Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keep_Warm__c</fullName>
        <inlineHelpText>Check this to have the contact included in the follow-up report after 3 months of no activity.</inlineHelpText>
        <label>Keep Warm</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <inlineHelpText>The primary language a person speaks.</inlineHelpText>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should this person receive the CommCare Newsletter? If Email Opt Out is checked they won&apos;t receive no matter what.</inlineHelpText>
        <label>CommCare Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_Title__c</fullName>
        <inlineHelpText>The title of a publication this contact has made.</inlineHelpText>
        <label>Publication Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Publication_URL__c</fullName>
        <inlineHelpText>The web address of a publication this contact has made.</inlineHelpText>
        <label>Publication URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Relationship_Strength__c</fullName>
        <label>Relationship Strength</label>
        <picklist>
            <picklistValues>
                <fullName>Strong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weak</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skype__c</fullName>
        <label>Skype</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <inlineHelpText>Our own tag field because Salesforce tags suck.  Don&apos;t delete other people&apos;s tags.</inlineHelpText>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Relationship_Strength__c</columns>
        <columns>Keep_Warm__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Country__c</columns>
        <columns>Tag__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>DMoz_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Country__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <label>DMoz Contacts</label>
        <sharedTo>
            <group>All_Dimagi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>India_Uploads</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Country__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Newsletter__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Div2 India upload</value>
        </filters>
        <label>India Uploads</label>
    </listViews>
    <listViews>
        <fullName>Indian_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <label>Indian Contacts</label>
    </listViews>
    <listViews>
        <fullName>Keep_Warm_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Keep_Warm__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Keep Warm Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Relationship_Strength__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Relationship_Strength__c</columns>
        <columns>Keep_Warm__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>South_Africa_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Country__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>South Africa</value>
        </filters>
        <label>South Africa Contacts</label>
    </listViews>
    <listViews>
        <fullName>West_Africa_Workshop</fullName>
        <columns>CONTACT.SALUTATION</columns>
        <columns>Language__c</columns>
        <columns>Tag__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CAMPAIGN_MEMBER.STATUS</columns>
        <columns>Country__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>West Africa RFA Members</label>
    </listViews>
    <listViews>
        <fullName>no_account_by_neal</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>neal</value>
        </filters>
        <label>no_account_by_neal</label>
    </listViews>
    <namedFilters>
        <fullName>nf_01Ib0000000UKnGEAW_00Nb0000002GLaZEAW</fullName>
        <active>true</active>
        <field>Project__c.Project_Manager__c</field>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>contains</operation>
            <value>Dimagi</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Project_Project Manager</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ib0000000UKnGEAW_00Nb0000002GLaeEAG</fullName>
        <active>true</active>
        <field>Project__c.Backstop__c</field>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>contains</operation>
            <value>Dimagi</value>
        </filterItems>
        <infoMessage>This is filtered on Dimagi employees by default.</infoMessage>
        <isOptional>true</isOptional>
        <name>Project_Backstop</name>
    </namedFilters>
</CustomObject>